Issue363: increase line spacing

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -5,7 +5,6 @@
 .footer {
   padding: var(--large) var(--xx-small);
   font-size: var(--p-xsmall);
-  line-height: 133.33%;
   sup {
     font-size: inherit;
   }
